--- a/documentation/SystemDesign/LowLevel/Design.tex
+++ b/documentation/SystemDesign/LowLevel/Design.tex
@@ -73,6 +73,7 @@
    Dec 29, 2017 & 1.0 & Structure made for document including headings & Christopher McDonald \\ \hline
    Jan 11, 2018 & 1.1 & Added content for ShotRecommendation and SmartServe systems, and Communication Protocols Sections & Christopher McDonald \\
    Jan 11, 2018 & 1.2 & Added content for Document Overview & Christopher McDonald \\ \hline
+   Jan 12, 2018 & 1.2 & added data storage and user interface modules & Sharon Platkin \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
@@ -146,7 +147,7 @@ The connection to the Arduino. \\ \\
 \subsubsection*{ShotRecommendationConnector}
 \textbf{Responsibilities} \\
 This module is responsible for facilitating the communication with the Shot Recommender subsystem. This includes sending and receiving messages as well as ensuring proper testing of the connection is preformed. \\ \\
-\textbf{Secrets} \\ 
+\textbf{Secrets} \\
 The connection to the Shot Recommender. \\ \\
 \textbf{MID}
 \begin{itemize}
@@ -159,7 +160,7 @@ The connection to the Shot Recommender. \\ \\
 \subsubsection*{CVConnector}
 \textbf{Responsibilities} \\
 This module is responsible for facilitating the communication with the CV (Computer Vision) subsystem. This includes sending and receiving messages as well as ensuring proper testing of the connection is preformed. \\ \\
-\textbf{Secrets} \\ 
+\textbf{Secrets} \\
 The connection to the CV system. \\ \\
 \textbf{MID}
 \begin{itemize}
@@ -171,7 +172,7 @@ The connection to the CV system. \\ \\
 \subsubsection*{SQLConnector}
 \textbf{Responsibilities} \\
 This module is responsible for facilitating the communication with the Data Storage subsystem. This includes sending and receiving messages as well as ensuring proper testing of the connection is preformed. \\ \\
-\textbf{Secrets} \\ 
+\textbf{Secrets} \\
 The connection to the Data Storage system. \\ \\
 \textbf{MID}
 \begin{itemize}
@@ -195,7 +196,7 @@ The process for handling Shot Recommendation requests. \\ \\
 \subsubsection*{Model}
 \textbf{Responsibilities} \\
 This module will hold the data for each user in such a way information can be extracted. It will contain an internal model which is built from the data and use it to recommend a new shot. \\ \\
-\textbf{Secrets} \\ 
+\textbf{Secrets} \\
 The algorithm to build the model. \\ \\
 \textbf{MID}
 \begin{itemize}
@@ -208,8 +209,8 @@ The algorithm to build the model. \\ \\
 \subsubsection*{Module 1}
 \textbf{Responsibilities} \\
 some text \\
-\textbf{Secrets} \\ 
-some text \\ 
+\textbf{Secrets} \\
+some text \\
 \textbf{MID} \\
 some text \\
 \textbf{MIS} \\
@@ -218,8 +219,8 @@ some text \\
 \subsubsection*{Module 1}
 \textbf{Responsibilities} \\
 some text \\
-\textbf{Secrets} \\ 
-some text \\ 
+\textbf{Secrets} \\
+some text \\
 \textbf{MID} \\
 some text \\
 \textbf{MIS} \\
@@ -228,8 +229,8 @@ some text \\
 \subsubsection*{Module 1}
 \textbf{Responsibilities} \\
 some text \\
-\textbf{Secrets} \\ 
-some text \\ 
+\textbf{Secrets} \\
+some text \\
 \textbf{MID} \\
 some text \\
 \textbf{MIS} \\
@@ -238,26 +239,26 @@ some text \\
 \subsubsection*{Global}
 \textbf{Responsibilities} \\
 Communicates with the database to create, delete and update rows in various tables.  \\
-\textbf{Secrets} \\ 
-All connection information between the sub-systems, table contents.\\ 
+\textbf{Secrets} \\
+All connection information between the sub-systems, table contents.\\
 \textbf{MID} \\
 \begin{itemize}
-\item User \textbf{user} - String user_name, String password, int user_id \\ description: representation of a user 
-\item Shot \textbf{shotType} - int zone_id, int omega_id, int shot_id \\ description: representation of a shot type
-\item Zone \textbf{user} -  int zone_id, double x_loc, double y_loc \\ description: representation of a zone on the table, used as a look up table 
-\item Omega \textbf{user} - int omega_id, double angle, double velocity \\ description: representation of angular velocity of the ball, used as a look up table 
-\item ReturnRate \textbf{return_rate} - int user_id, int shot_id,  Timestamp timeStamp, boolean returned \\ description: return statistics for each user
-
+\item User \textbf{user} - String user\textunderscore name, String password, int user\textunderscore id \\ description: representation of a user
+\item Shot \textbf{shotType} - int zone\textunderscore id, int omega\textunderscore id, int shot\textunderscore id \\ description: representation of a shot type
+\item Zone \textbf{user} -  int zone\textunderscore id, double x\textunderscore loc, double y\textunderscore loc \\ description: representation of a zone on the table, used as a look up table
+\item Omega \textbf{user} - int omega\textunderscore id, double angle, double velocity \\ description: representation of angular velocity of the ball, used as a look up table
+\item ReturnRate \textbf{return\textunderscore rate} - int user\textunderscore id, int shot\textunderscore id,  Timestamp timeStamp, boolean returned \\ description: return statistics for each user
 \item \textbf{signUp} - String userName, String password \\ returns: \textit{void} \\ description: adds a user row to the \textit{User} table
-\item \textbf{shotType} - int zone \\ returns: \textit{Shot} \\ description: determines which shot type to perform
-
+\item \textbf{nextShot} - int zone \\ returns: \textit{Shot} \\ description: determines which shot type to perform
+\item \textbf{returned} - Timestamp timeStamp, User user, Shot shot \\ returns: \textit{void} \\ description: updates returnRate table for user for performance statistics
 \end{itemize}
+
 \subsection{Shooting Mechanism Modules}
 \subsubsection*{Module 1}
 \textbf{Responsibilities} \\
 some text \\
-\textbf{Secrets} \\ 
-some text \\ 
+\textbf{Secrets} \\
+some text \\
 \textbf{MID} \\
 some text \\
 \textbf{MIS} \\
@@ -266,22 +267,28 @@ some text \\
 \subsubsection*{Controlller}
 \textbf{Responsibilities} \\
 Responsible for communicating with the SmartServe system as well as the View module to collect information from the user. \\
-\textbf{Secrets} \\ 
-User information. \\ 
+\textbf{Secrets} \\
+Connection between sub-systems. \\
 \textbf{MID} \\
 \begin{itemize}
 \item \textbf{main} - String args[] \\ returns: \textit{void} \\ description: calls the view module to initialize the UI
-\item \textbf{} - param \\ returns: \textit{param} \\ description:
+\item \textbf{getTrainingMode} - none \\ returns: \texit{Mode} \\ description: gets mode from view module and sends it to SmartServe
+\item \textbf{getShootingParameters} - none \\ returns: \textit{ShootingParameters} \\ description: gets shooting parameters from view module and sends it to SmartServe
 \end{itemize}
 \subsubsection*{View}
 \textbf{Responsibilities} \\
 The view module will contain all the actual visual aspects of the system that the user will interact with. This includes text, pictures, buttons, etc. \\
-\textbf{Secrets} \\ 
-Button functionalities. \\ 
+\textbf{Secrets} \\
+Button functionalities. \\
 \textbf{MID} \\
 \begin{itemize}
-\item \textbf{mouseClick} - MouseEvent \\ returns: \textit{boolean} \\ description: listens for a mouse clicks on various buttons 
 \item \textbf{application} - none \\ returns: \textit{void} \\ description: general user interface code, called to initiate UI
+\item \textbf{selectMode} - MouseEvent \\ returns: \textit{Mode} \\ description: listens for a mouse click on mode types, and returns that mode
+\item \textbf{calibrate} - none \\ returns: \textit{ShootingParameters} \\ description: collects user input for table size in order to calibrate the system
+\item \textbf{startTrainingBtn} - MouseEvent \\ returns: \textit{boolean} \\ description: listens for mouse click on start training button
+\item \textbf{stopTrainingBtn} - MouseEvent \\ returns: \textit{boolean} \\ description: listens for mouse click on stop training button
+
+
 \end{itemize}
 
 \section{Communication Protocols} % Chris
@@ -301,9 +308,9 @@ The SS and the Shot Optimizer system (SO) will both be programmed using Java. Th
 \subsection{Smart Serve to Shooting Model}
 The SS and the Shooting Model system (SModel) will both be programmed using Java. The SS system can interface with the SModel by calling exposed public methods based on user input.
 \subsection{Smart Serve to Data Storage}
-The SS is programmed in Java and the Data Storage system (DS) will be implemented using Stored Procedures held in a MySQL database instance. In order for the SS to use the DS, a \href{https://dev.mysql.com/downloads/connector/j/5.1.html}{SQLConnector} can be used to do so. 
+The SS is programmed in Java and the Data Storage system (DS) will be implemented using Stored Procedures held in a MySQL database instance. In order for the SS to use the DS, a \href{https://dev.mysql.com/downloads/connector/j/5.1.html}{SQLConnector} can be used to do so.
 \subsection{Shot Recommendation to Data Storage}
-The SR is programmed in Python and the Data Storage system (DS) will be implemented using Stored Procedures held in a MySQL database instance. In order for the SR to use the DS, a \href{https://dev.mysql.com/doc/connector-python/en/}{SQLConnector} can be used to do so. 
+The SR is programmed in Python and the Data Storage system (DS) will be implemented using Stored Procedures held in a MySQL database instance. In order for the SR to use the DS, a \href{https://dev.mysql.com/doc/connector-python/en/}{SQLConnector} can be used to do so.
 
 
 
