fixed latex error

--- a/documentation/SystemDesign/LowLevel/Design.tex
+++ b/documentation/SystemDesign/LowLevel/Design.tex
@@ -272,7 +272,7 @@ Connection between sub-systems. \\
 \textbf{MID} \\
 \begin{itemize}
 \item \textbf{main} - String args[] \\ returns: \textit{void} \\ description: calls the view module to initialize the UI
-\item \textbf{getTrainingMode} - none \\ returns: \texit{Mode} \\ description: gets mode from view module and sends it to SmartServe
+\item \textbf{getTrainingMode} - none \\ returns: \textit{Mode} \\ description: gets mode from view module and sends it to SmartServe
 \item \textbf{getShootingParameters} - none \\ returns: \textit{ShootingParameters} \\ description: gets shooting parameters from view module and sends it to SmartServe
 \item \textbf{getStatistics} - none \\ returns: \textit{StatisticsParameters} \\ description: gets statistics parameters and sends them to view module
 \item \textbf{signUp} - User user \\ returns \textit{void} \\ description: gets user information from view module and sends it to smartServe
