--- a/documentation/SystemDesign/LowLevel/Design.tex
+++ b/documentation/SystemDesign/LowLevel/Design.tex
@@ -247,7 +247,7 @@ The connection to the Shot Optimizer system. \\ \\
 \subsection{Computer Vision Modules}
 \subsubsection*{Detect}
 \textbf{Responsibilities} \\
-This module detects successful returns from the user, and sends that data to smartserve\\
+This module detects successful returns from the user, and sends that data to the SmartServe subsystem\\
 \textbf{Secrets} \\ 
 Success criteria of returns and how the camera feed is analyzed.\\ 
 \textbf{MID} 
@@ -279,7 +279,7 @@ This module will be specified in the hardware component design of the shooting m
 \subsection{User Interface Modules}
 \subsubsection*{Controller}
 \textbf{Responsibilities} \\
-Responsible for translating the desired action of the user from the View module to the SmartServe module. \\ \\
+Responsible for translating the desired action of the user from the View module to the SmartServe subsystem. \\ \\
 \textbf{Secrets} \\
 Connection between modules and sub-systems. \\ \\
 \textbf{MID}
